# pubmed-search

./: Cargo.toml  LICENSE-MIT  README.md  index.html  index.scss
src/: lib.rs  main.rs  router.rs
src/components/: article_ids.rs  common_functions.rs  entrez_doc.md  mod.rs  query_article.rs  search_page.rs
